<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEmailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:layout_marginHorizontal="50sp"
            android:background="#E8E8E8"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordTextView"
        android:layout_below="@id/loginEmailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:layout_marginHorizontal="50sp"
            android:background="#E8E8E8"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:hint="@string/password"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_below="@id/loginPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginTop="16sp"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="#FA4A0C"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24sp"
        android:layout_marginHorizontal="50sp"
        android:text="@string/login"
        android:textSize="17sp"
        android:padding="15dp"
        android:textAlignment="center"
        android:background="@drawable/login_button_background"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>